Add last minute changes

--- a/pres.html
+++ b/pres.html
@@ -927,11 +927,13 @@ class: segue-yellow
 
 ---
 
+
 ## XGBoost Roc
 --- 
 
 ![](data:image/png;base64,#pres_files/figure-html/unnamed-chunk-7-1.png)&lt;!-- --&gt;
 
+---
 
 ## Comparision
 
@@ -966,7 +968,7 @@ class: segue-yellow
 --- 
 
 - Class Imbalance Solutions
-  - Futher EDA to decide other means of removing data, or possibly leaving data imbalanced.
+  - Further EDA to decide other means of removing data, or possibly leaving data imbalanced.
 
 - Further Evaluation (Precision, Recall, F1-Score and AUC-ROC)
 
